Fix compilation des tests sous --release 8
Les tests utilisaient des APIs > Java 8, ce qui cassait 'mvn package'
(testCompile) et forcait un contournement -Dmaven.test.skip=true:
 - SsomarDevTest: Files.readString (Java 11) -> new String(Files.readAllBytes, UTF_8)
 - ItemsAdderAPITest: Set.of (Java 9) -> new HashSet<>(Arrays.asList(...))

'mvn package' passe desormais de bout en bout sous JDK 25 + --release 8.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>